Add redis caching to user endpoints
