# docs/swagger.json
@@ -435,6 +435,11 @@
         },
         "/users/{userID}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "get user",
                 "consumes": [
                     "application/json"
